--- a/SDM_webApp/web/common/table.css
+++ b/SDM_webApp/web/common/table.css
@@ -98,12 +98,7 @@ tr:last-of-type td:last-child {
     box-shadow: inset -1px -1px 0 #fff;
 }
 
-tbody:hover td {
-    color: transparent;
-    text-shadow: 0 0 3px #aaa;
-}
 
 tbody:hover tr:hover td {
-    color: #444;
-    text-shadow: 0 1px 0 #fff;
+    background-color: #969a9b;
 }
