store info complete

--- a/SDM_webApp/web/common/table.css
+++ b/SDM_webApp/web/common/table.css
@@ -1,5 +1,5 @@
 body {
-    background: #fafafa url(https://jackrugile.com/images/misc/noise-diagonal.png);
+    background: #fafafa;
     color: #444;
     font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
     text-shadow: 0 1px 0 #fff;
@@ -25,7 +25,7 @@ table {
 }
 
 th {
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
+    background: linear-gradient(#777, #444);
     border-left: 1px solid #555;
     border-right: 1px solid #777;
     border-top: 1px solid #555;
@@ -78,12 +78,8 @@ td:last-child {
     box-shadow: inset -1px 0 0 #fff;
 }
 
-tr {
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png);
-}
-
 tr:nth-child(odd) td {
-    background: #f1f1f1 url(https://jackrugile.com/images/misc/noise-diagonal.png);
+    background-color: #f1f1f1;
 }
 
 tr:last-of-type td {
