--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
@@ -136,3 +136,17 @@ span.price {
 #choose-date-label{
 
 }
+.my-navbar{
+
+    background-color: #343a40 !important;
+
+
+}
+
+body{
+    padding: 1px !important;
+}
+.nav-contanier{
+    border: 0px;
+    margin: 0;
+}
