zone page working

--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.css
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.css
@@ -1,3 +1,7 @@
+body{
+    margin: 15px;
+}
+
 table {
     border     : 1px solid gray;
     width      : 50%;
@@ -12,3 +16,10 @@ table#sourcetable tbody  tr {
     cursor : pointer;
 }
 
+#tablesRow{
+    margin-top: 10px;
+}
+
+#nextButton{
+    float: right;
+}
