--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
@@ -134,3 +134,12 @@ input::-webkit-inner-spin-button {
     background-color: #5ed6f6;
 
 }
+.amountText{
+    width: 50px;
+    height: 25px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 10px;
+    margin-right: 4px;
+
+}
