go to second page done

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.css
@@ -143,3 +143,8 @@ input::-webkit-inner-spin-button {
     margin-right: 4px;
 
 }
+#secondPgBtn{
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+    }
