--- a/SDM_webApp/web/pages/localStores/ownerPage/addNewStore/addNewStore.css
+++ b/SDM_webApp/web/pages/localStores/ownerPage/addNewStore/addNewStore.css
@@ -1,14 +1,3 @@
-.location-input{
-    padding-left: 0;
-    width: 34px;!important;
-    height: 24px;
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
 body {
     background: -webkit-linear-gradient(to right, #e8e5e0, #cbc1c5);
     background: linear-gradient(to right, #e8e5e0, #cbc1c5);
@@ -16,16 +5,7 @@ body {
 }
 
 td{
-    max-width: 65%;
-}
-
-tr{
-    align-content: center;
-    max-width: 65%;
-}
-
-table{
-    align-content: center;
+    padding-left: 10px;
 }
 .order-summery{
     margin-top: 45px;
